namespace TicTacToe.Utils.Coordinates;

public enum Direction
{
    VERTICAL,
    HORIZONTAL,
    MAIN_DIAGONAL,
    INVERSE_DIAGONAL,
    NULL
}
