internal enum ErrorType
{
    IS_NOT_EMPTY,
    NOT_OWNER,
    SAME_COORDINATE,
    WRONG_COORDINATES,
    NULL
}
